--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">Penny</a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>Where we are all about that dog</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
