Changed Penny TItle

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Penny</a></h1>
+								<h1><a href="index.html" id="logo">Hi, I'm Penny</a></h1>
 								<hr />
 								<p>Where we are all about that dog</p>
 							</header>
