--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt"><strong>Hi! I'm Prologue, a responsive</strong><br />
+									<strong>site template designed by HTML5 UP.</strong></h2>
+
 							</header>
 
 							<footer>
@@ -73,6 +72,25 @@
 						</div>
 					</section>
 
+				<!-- About Me -->
+				<section id="about" class="three">
+					<div class="container">
+
+						<header>
+							<h2>About Me</h2>
+						</header>
+
+						<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+
+						<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+						ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
+						laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
+						parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
+						dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
+						ornare iaculis.</p>
+
+					</div>
+				</section>
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
@@ -89,7 +107,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://www.nytimes.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Ipsum Feugiat</h3>
 										</header>
@@ -128,31 +146,18 @@
 											<h3>Orci Convallis</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<header>
+											<h3>Orci Convallis</h3>
+										</header>
+									</article>
 								</div>
 							</div>
 
 						</div>
 					</section>
 
-				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
-
-							<header>
-								<h2>About Me</h2>
-							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
-
-						</div>
-					</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
