--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -88,7 +89,9 @@
 						parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
 						dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
 						ornare iaculis.</p>
-
+						<footer>
+							<a href="https://github.com/mjgilles/mjgilles.github.io/raw/master/images/pic03.jpg" class="button scrolly">Resume/CV</a>
+						</footer>
 					</div>
 				</section>
 				<!-- Portfolio -->
