--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Projects</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-paw">Portfolio</span></a></li>
-								<li><a href="#press" id="press-link"><span class="icon solid fa-newspaper">Press</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-file-signature">Resume/CV</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-newspaper">Press Coverage</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -73,7 +74,72 @@
 
 						</div>
 					</section>
+<!-- Portfolio -->
+<section id="portfolio" class="two">
+	<div class="container">
 
+		<header>
+			<h2>Projects</h2>
+		</header>
+
+		<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
+		egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
+		Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
+		fusce hendrerit lacus ridiculus.</p>
+
+		<div class="row">
+			<div class="col-4 col-12-mobile">
+				<article class="item">
+					<a href="https://www.nytimes.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+					<header>
+						<h3>Ipsum Feugiat</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+					<header>
+						<h3>Rhoncus Semper</h3>
+					</header>
+				</article>
+			</div>
+			<div class="col-4 col-12-mobile">
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+					<header>
+						<h3>Magna Nullam</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+					<header>
+						<h3>Natoque Vitae</h3>
+					</header>
+				</article>
+			</div>
+			<div class="col-4 col-12-mobile">
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+					<header>
+						<h3>Dolor Penatibus</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+					<header>
+						<h3>Orci Convallis</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+					<header>
+						<h3>Orci Convallis</h3>
+					</header>
+				</article>
+			</div>
+		</div>
+
+	</div>
+</section>
 				<!-- About Me -->
 				<section id="about" class="three">
 					<div class="container">
@@ -95,139 +161,73 @@
 						</footer>
 					</div>
 				</section>
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
+				
+<!-- Portfolio -->
+<section id="portfolio" class="two">
+	<div class="container">
 
-							<header>
-								<h2>Projects</h2>
-							</header>
+		<header>
+			<h2>Press Coverage</h2>
+		</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+		<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
+		egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
+		Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
+		fusce hendrerit lacus ridiculus.</p>
 
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://www.nytimes.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-								</div>
-							</div>
+		<div class="row">
+			<div class="col-4 col-12-mobile">
+				<article class="item">
+					<a href="https://www.nytimes.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+					<header>
+						<h3>Ipsum Feugiat</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+					<header>
+						<h3>Rhoncus Semper</h3>
+					</header>
+				</article>
+			</div>
+			<div class="col-4 col-12-mobile">
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+					<header>
+						<h3>Magna Nullam</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+					<header>
+						<h3>Natoque Vitae</h3>
+					</header>
+				</article>
+			</div>
+			<div class="col-4 col-12-mobile">
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+					<header>
+						<h3>Dolor Penatibus</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+					<header>
+						<h3>Orci Convallis</h3>
+					</header>
+				</article>
+				<article class="item">
+					<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+					<header>
+						<h3>Orci Convallis</h3>
+					</header>
+				</article>
+			</div>
+		</div>
 
-						</div>
-					</section>
-
-									<!-- Portfolio -->
-					<section id="press" class="two">
-						<div class="container">
-
-							<header>
-								<h2>Press</h2>
-							</header>
-
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
-
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://www.nytimes.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-								</div>
-							</div>
-
-						</div>
-					</section>
+	</div>
+</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
