--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Projects</span></a></li>
+								<!--<li><a href="#about" id="about-link"><span class="icon solid fa-file-signature">Resume/CV</span></a></li>-->
+								<li><a href="#about" id="press-link"><span class="icon solid fa-newspaper">Press Coverage</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-file-signature">Resume/CV</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-newspaper">Press Coverage</span></a></li>
+
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -47,7 +48,7 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -64,7 +65,7 @@
 
 							<header>
 								<h2 class="alt"><strong>Hi, I'm Matt</strong></h2>
-								<h4 class="alt"><strong>a data scientist and graph database architect.</strong></h4>
+								<h4 class="alt"><strong>a data scientist and graph database architect </br> living and working in Florida, USA.</strong></h4>
 
 							</header>
 
@@ -140,27 +141,6 @@
 
 	</div>
 </section>
-				<!-- About Me -->
-				<section id="about" class="three">
-					<div class="container">
-
-						<header>
-							<h2>About Me</h2>
-						</header>
-
-						<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-
-						<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-						ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-						laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-						parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-						dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-						ornare iaculis.</p>
-						<footer>
-							<a href="https://github.com/mjgilles/mjgilles.github.io/raw/master/images/pic03.jpg" class="button scrolly">Resume/CV</a>
-						</footer>
-					</div>
-				</section>
 				
 <!-- Portfolio -->
 <section id="portfolio" class="two">
@@ -228,6 +208,28 @@
 
 	</div>
 </section>
+
+				<!-- About Me -->
+				<section id="about" class="three">
+					<div class="container">
+
+						<header>
+							<h2>About Me</h2>
+						</header>
+
+						<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+
+						<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+						ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
+						laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
+						parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
+						dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
+						ornare iaculis.</p>
+						<footer>
+							<!--<a href="https://github.com/mjgilles/mjgilles.github.io/raw/master/images/pic03.jpg" class="button scrolly">Resume/CV</a>
+						</footer>-->
+					</div>
+				</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
