--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Matt Gillespie | Data Scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,10 @@
 							<h1>Hi, I'm Matt</h1>
 							<p class="major">a data scientist and graph database architect currently living and working in Florida, USA.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button icon solid fa-user smooth-scroll-middle">About Me</a></li>
+								<li><a href="#second" class="button icon solid fa-desktop smooth-scroll-middle">What I Do</a></li>
+								<li><a href="#third" class="button icon solid fa-envelope smooth-scroll-middle">Get in Touch</a></li>
+
 							</ul>
 						</div>
 						<div class="image">
@@ -79,7 +82,7 @@
 
 
 				<!-- Six -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="second">
 						<div class="inner">
 							<h2>What I do</h2>
 							<p>I'm currently the Head of Data Science at a creative digital agency in South Florida. My work has a lot to do with the intersection of databases, data analysis, content positioning and understanding, and marketing strategy.</p>
@@ -348,7 +351,7 @@
 
 				</section>
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="third">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<p>I'd love to say hello! Please send me a short message using the form below.</p>
