--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<p class="major">a data scientist and graph database architect currently living and working in Florida, USA.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button icon solid fa-user smooth-scroll-middle">About Me</a></li>
-								<li><a href="#second" class="button icon solid fa-desktop smooth-scroll-top">What I Do</a></li>
+								<li><a href="#second" class="button icon solid fa-desktop smooth-scroll">What I Do</a></li>
 								<li><a href="#third" class="button icon solid fa-envelope smooth-scroll-middle">Get in Touch</a></li>
 
 							</ul>
