--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 							<ul class="actions stacked">
 								<li><a href="#first" class="button icon solid fa-user smooth-scroll-middle">About Me</a></li>
 								<li><a href="#second" class="button icon solid fa-desktop smooth-scroll">What I Do</a></li>
+								<li><a href="#news" class="button icon solid fa-newspaper smooth-scroll">In the News</a></li>
 								<li><a href="#third" class="button icon solid fa-envelope smooth-scroll-middle">Get in Touch</a></li>
 
 							</ul>
@@ -76,7 +77,7 @@
 							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/banner.jpg" alt="" />
 						</div>
 					</section>
 
@@ -159,7 +160,7 @@
 					</section>
 
 				<!-- Five -->
-				<section class="wrapper style1 align-center">
+				<section class="wrapper style1 align-center" id="news">
 					<div class="inner">
 						<h2>Press Mentions and Project Coverage</h2>
 						<p>My data science work and content marketing projects have been referenced in dozens of stories in national and local media. Click on an icon below to see more.</p>
