Change to story

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<ul class="actions stacked">
 								<li><a href="#first" class="button icon solid fa-user smooth-scroll-middle">About Me</a></li>
 								<li><a href="#second" class="button icon solid fa-desktop smooth-scroll">What I Do</a></li>
-								<li><a href="#news" class="button icon solid fa-newspaper smooth-scroll">In the News</a></li>
+								<li><a href="#news" class="button icon solid fa-newspaper smooth-scroll-middle">In the News</a></li>
 								<li><a href="#third" class="button icon solid fa-envelope smooth-scroll-middle">Get in Touch</a></li>
 
 							</ul>
