Change to story

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight04.jpg" alt="" />
+							<img src="images/spotlight05.jpg" alt="" />
 						</div>
 					</section>
 
@@ -86,7 +86,7 @@
 					<section class="wrapper style1 align-center" id="second">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p>I'm currently the Head of Data Science at a creative digital agency in South Florida. My work has a lot to do with the intersection of databases, data analysis, content positioning and understanding, and marketing strategy.</p>
+							<p>I'm currently the Head of Data Science at a creative digital agency in South Florida. My work has a lot to do with the intersection of databases, data analysis, content understanding, and marketing strategy.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon solid style2 major fa-database"></span>
@@ -96,7 +96,7 @@
 								<section>
 									<span class="icon solid style2 major fa-terminal"></span>
 									<h3>Code and Development</h3>
-									<p>I work mostly in Python, SQL, Cypher, and GraphQL, with a smattering of R, JavaScript, and Go (but only when absolutely necessary and even then with some hesitation)</p>
+									<p>I work mostly in Python, SQL, Cypher, and GraphQL, with a smattering of R, JavaScript, and (when absolutely necessary and even then with some hesitation) Go</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
@@ -105,7 +105,7 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-book"></span>
-									<h3>Natural Language Understanding and Language Models</h3>
+									<h3>NLU and Language Models</h3>
 									<p>Experience building and deploying text classification and generation models at scale using PyTorch, BERT, fastText, Scikit-learn, and the Google Natural Language API</p>
 								</section>
 								<section>
