--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179611205-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-179611205-1');
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -31,7 +39,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight05.jpg" alt="" />
+							<img src="images/spotlight12.jpg" alt="" />
 						</div>
 					</section>
 
@@ -77,7 +85,7 @@
 							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/spotlight05.jpg" alt="" />
 						</div>
 					</section>
 
