Change to favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Matt Gillespie | Data Scientist</title>
+		<title>Matt Gillespie</title>
+		<link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+		<link runat="server" rel="icon" href="favicon.ico" type="image/ico"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
