--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<section class="wrapper style1 align-center" id="second">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p>I'm currently the Head of Data Science at a creative digital agency in South Florida. My work has a lot to do with the intersection of databases, data analysis, content understanding, and marketing strategy.</p>
+							<p>I'm currently the Head of Data Science at a creative digital agency in South Florida. My work has a lot to do with the intersection of databases, media intelligence, content understanding, public relations, and marketing strategy.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon solid style2 major fa-database"></span>
