--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<section>
 									<span class="icon solid style2 major fa-book"></span>
 									<h3>NLU and Language Models</h3>
-									<p>Experience building and deploying text classification and generation models at scale using PyTorch, BERT, fastText, Scikit-learn, and the Google Natural Language API</p>
+									<p>Experience creating and deploying text classification and generation models at scale using PyTorch, BERT, fastText, Scikit-learn, and the Google Natural Language API</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-poll"></span>
